<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.VerifyFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="64dp"
                android:text="@string/verification_code"
                android:textColor="#373434" />

            <EditText
                android:id="@+id/verificationCodeEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/textViewV"
                android:layout_marginStart="64dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="64dp"
                android:background="@drawable/background_textview"
                android:hint="@string/enter_code_here"
                android:inputType="number"
                android:textAlignment="center"
                android:textSize="19sp" />

            <Button
                android:id="@+id/verifyButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/verificationCodeEditText"
                android:layout_marginStart="64dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="64dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/background_edit"
                android:text="@string/verify"
                android:textAllCaps="false"
                android:textColor="@color/turquoiseColor"
                android:textSize="21sp"
                android:textStyle="normal" />
        </RelativeLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/pBarVerify"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/semi_gray"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/prbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="64dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/prbar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:text="@string/loading"
            android:textSize="21sp"
            android:textStyle="italic" />
    </RelativeLayout>

</RelativeLayout>