<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".login.LoginFragment">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="130dp"
                android:layout_height="150dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="119dp"
                android:layout_marginEnd="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/loading"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/phone_number"
                android:textColor="@color/textColorDark"
                app:layout_constraintBottom_toTopOf="@+id/editTextPhoneNumber"
                app:layout_constraintStart_toEndOf="@+id/ccPicker" />

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccPicker"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="3dp"
                app:ccpDialog_textColor="#000"
                app:ccp_defaultNameCode="KG"
                app:ccp_textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView1" />

            <EditText
                android:id="@+id/editTextPhoneNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="32dp"
                android:drawableEnd="@drawable/ic_phone"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:autofillHints="@string/phone_number"
                android:textColor="@color/turquoiseColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ccPicker"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="63dp"
                android:layout_marginEnd="64dp"
                android:background="@drawable/background_edit"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textSize="21sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBoxAgree" />


            <CheckBox
                android:id="@+id/checkBoxAgree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="88dp"
                android:layout_marginTop="38dp"
                android:background="@drawable/background_edit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextPhoneNumber" />

            <TextView
                android:id="@+id/textViewConditions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="50dp"
                android:text="@string/conditions"
                android:textColor="@color/textColorDark"
                android:textSize="15sp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/checkBoxAgree"
                app:layout_constraintTop_toBottomOf="@+id/editTextPhoneNumber" />

            <TextView
                android:id="@+id/resendCodeTextViewLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="64dp"
                android:text="@string/resend_code"
                android:textAlignment="center"
                android:textColor="#292626"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginButton" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/doneby"
                android:textAlignment="center"
                android:textColor="@color/textColorDark"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/resendCodeTextViewLogin" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/pBarLoginRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/semi_gray"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/pBarLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="visible" />
    </RelativeLayout>

</RelativeLayout>