<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_profile"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/actionBar"
            android:theme="@style/ThemeOverlay.MaterialComponents.Light"
            app:titleTextColor="@color/textColorDark" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgProfile"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/uploadProfilePhoto"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_below="@+id/imgProfile"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:background="@drawable/background_edit"
                android:gravity="center"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/upload_profile_picture"
                android:textColor="@color/turquoiseColor"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/textViewD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/uploadProfilePhoto"
                android:layout_marginStart="64dp"
                android:layout_marginTop="32dp"
                android:text="@string/display_name" />

            <EditText
                android:id="@+id/displayNameProfile"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/textViewD"
                android:layout_marginStart="48dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="48dp"
                android:background="@drawable/background_edit"
                android:drawableEnd="@drawable/ic_person"
                android:hint="@string/display_name"
                android:inputType="textPersonName"
                android:paddingStart="16dp"
                android:paddingEnd="12dp" />

            <TextView
                android:id="@+id/textViewD1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/displayNameProfile"
                android:layout_marginStart="64dp"
                android:layout_marginTop="32dp"
                android:text="@string/status" />

            <EditText
                android:id="@+id/statusProfileActivity"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/textViewD1"
                android:layout_marginStart="48dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/background_edit"
                android:drawableEnd="@drawable/ic_info"
                android:hint="@string/status"
                android:inputType="textPersonName"
                android:paddingStart="12dp"
                android:paddingEnd="12dp" />

        </RelativeLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/pBarProfile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/semi_gray"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>

</RelativeLayout>